--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "swiper": "^6.3.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
