--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "takEat easy"
-meta_title: "takEat easy, organiser, cuisiner, régaler!"
+meta_title: "Organiser, Cuisiner, se Régaler: takEat easy!"
 meta_description: "Relevant description"
 meta_image: "iconFB1200x630.jpg" # should exist in `app/assets/images/`
 # twitter_account: "@product_twitter_account"   # required for Twitter Cards
